tests/macros/raw_select/filter.stderr
error: option `filter` does not exist for kind `raw_select`
 --> $DIR/filter.rs:2:47
  |
2 |     let q = discourse::questions![RawSelect { filter: todo!() }];
  |                                               ^^^^^^
