tests/macros/raw_select/filter.rs
fn main() {
    let q = discourse::questions![RawSelect { filter: todo!() }];
}
